src/lib.rs

pub type ULUpdateCallback =
    ::std::option::Option<unsafe extern "C" fn(user_data: *mut ::std::os::raw::c_void)>;
extern "C" {
    #[doc = ""]
    #[doc = " Set a callback for whenever the App updates. You should update all app"]
    #[doc = " logic here."]
    #[doc = ""]
    #[doc = " @note  This event is fired right before the run loop calls"]
    #[doc = "        Renderer::Update and Renderer::Render."]
    #[doc = ""]
    pub fn ulAppSetUpdateCallback(
        app: ULApp,
        callback: ULUpdateCallback,
        user_data: *mut ::std::os::raw::c_void,
    );
}
extern "C" {
    #[doc = ""]
    #[doc = " Whether or not the App is running."]
    #[doc = ""]
    pub fn ulAppIsRunning(app: ULApp) -> bool;
}
extern "C" {
    #[doc = ""]
    #[doc = " Get the main monitor (this is never NULL)."]
    #[doc = ""]
    #[doc = " @note  We'll add monitor enumeration later."]
    #[doc = ""]
    pub fn ulAppGetMainMonitor(app: ULApp) -> ULMonitor;
}
extern "C" {
    #[doc = ""]
    #[doc = " Get the underlying Renderer instance."]
    #[doc = ""]
    pub fn ulAppGetRenderer(app: ULApp) -> ULRenderer;
}
extern "C" {
    #[doc = ""]
    #[doc = " Run the main loop."]
    #[doc = ""]
    #[doc = " @note  Make sure to call ulAppSetWindow before calling this."]
    #[doc = ""]
    pub fn ulAppRun(app: ULApp);
}
extern "C" {
    #[doc = ""]
    #[doc = " Quit the application."]
    #[doc = ""]
    pub fn ulAppQuit(app: ULApp);
}
extern "C" {
    #[doc = ""]
    #[doc = " Get the monitor's DPI scale (1.0 = 100%)."]
    #[doc = ""]
    pub fn ulMonitorGetScale(monitor: ULMonitor) -> f64;
}
extern "C" {
    #[doc = ""]
    #[doc = " Get the width of the monitor (in device coordinates)"]
    #[doc = ""]
    pub fn ulMonitorGetWidth(monitor: ULMonitor) -> ::std::os::raw::c_uint;
}
extern "C" {
    #[doc = ""]
    #[doc = " Get the height of the monitor (in device coordinates)"]
    #[doc = ""]
    pub fn ulMonitorGetHeight(monitor: ULMonitor) -> ::std::os::raw::c_uint;
}
extern "C" {
    #[doc = ""]
    #[doc = " Create a new Window."]
    #[doc = ""]
    #[doc = " @param  monitor       The monitor to create the Window on."]
    #[doc = ""]
    #[doc = " @param  width         The width (in device coordinates)."]
    #[doc = ""]
    #[doc = " @param  height        The height (in device coordinates)."]
    #[doc = ""]
    #[doc = " @param  fullscreen    Whether or not the window is fullscreen."]
    #[doc = ""]
    #[doc = " @param  window_flags  Various window flags."]
    #[doc = ""]
    pub fn ulCreateWindow(
        monitor: ULMonitor,
        width: ::std::os::raw::c_uint,
        height: ::std::os::raw::c_uint,
        fullscreen: bool,
        window_flags: ::std::os::raw::c_uint,
    ) -> ULWindow;
}
extern "C" {
    #[doc = ""]
    #[doc = " Destroy a Window."]
    #[doc = ""]
    pub fn ulDestroyWindow(window: ULWindow);
}
pub type ULCloseCallback =
    ::std::option::Option<unsafe extern "C" fn(user_data: *mut ::std::os::raw::c_void)>;
extern "C" {
    #[doc = ""]
    #[doc = " Set a callback to be notified when a window closes."]
    #[doc = ""]
    pub fn ulWindowSetCloseCallback(
        window: ULWindow,
        callback: ULCloseCallback,
        user_data: *mut ::std::os::raw::c_void,
    );
}
pub type ULResizeCallback = ::std::option::Option<
    unsafe extern "C" fn(
        user_data: *mut ::std::os::raw::c_void,
        width: ::std::os::raw::c_uint,
        height: ::std::os::raw::c_uint,
    ),
>;
extern "C" {
    #[doc = ""]
    #[doc = " Set a callback to be notified when a window resizes"]
    #[doc = " (parameters are passed back in device coordinates)."]
    #[doc = ""]
    pub fn ulWindowSetResizeCallback(
        window: ULWindow,
        callback: ULResizeCallback,
        user_data: *mut ::std::os::raw::c_void,
    );
}
extern "C" {
    #[doc = ""]
    #[doc = " Get window width (in device coordinates)."]
    #[doc = ""]
    pub fn ulWindowGetWidth(window: ULWindow) -> ::std::os::raw::c_uint;
}
extern "C" {
    #[doc = ""]
    #[doc = " Get window height (in device coordinates)."]
    #[doc = ""]
    pub fn ulWindowGetHeight(window: ULWindow) -> ::std::os::raw::c_uint;
}
extern "C" {
    #[doc = ""]
    #[doc = " Get whether or not a window is fullscreen."]
    #[doc = ""]
    pub fn ulWindowIsFullscreen(window: ULWindow) -> bool;
}
extern "C" {
    #[doc = ""]
    #[doc = " Get the DPI scale of a window."]
    #[doc = ""]
    pub fn ulWindowGetScale(window: ULWindow) -> f64;
}
extern "C" {
    #[doc = ""]
    #[doc = " Set the window title."]
    #[doc = ""]
    pub fn ulWindowSetTitle(window: ULWindow, title: *const ::std::os::raw::c_char);
}
extern "C" {
    #[doc = ""]
    #[doc = " Set the cursor for a window."]
    #[doc = ""]
    pub fn ulWindowSetCursor(window: ULWindow, cursor: ULCursor);
}
extern "C" {
    #[doc = ""]
    #[doc = " Close a window."]
    #[doc = ""]
    pub fn ulWindowClose(window: ULWindow);
}
extern "C" {
    #[doc = ""]
    #[doc = " Convert device coordinates to pixels using the current DPI scale."]
    #[doc = ""]
    pub fn ulWindowDeviceToPixel(
        window: ULWindow,
        val: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = ""]
    #[doc = " Convert pixels to device coordinates using the current DPI scale."]
    #[doc = ""]
    pub fn ulWindowPixelsToDevice(
        window: ULWindow,
        val: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = ""]
    #[doc = " Create a new Overlay."]
    #[doc = ""]
    #[doc = " @param  window  The window to create the Overlay in. (we currently only"]
    #[doc = "                 support one window per application)"]
    #[doc = ""]
    #[doc = " @param  width   The width in device coordinates."]
    #[doc = ""]
    #[doc = " @param  height  The height in device coordinates."]
    #[doc = ""]
    #[doc = " @param  x       The x-position (offset from the left of the Window), in"]
    #[doc = "                 device coordinates."]
    #[doc = ""]
    #[doc = " @param  y       The y-position (offset from the top of the Window), in"]
    #[doc = "                 device coordinates."]
    #[doc = ""]
    #[doc = " @note  Each Overlay is essentially a View and an on-screen quad. You should"]
    #[doc = "        create the Overlay then load content into the underlying View."]
    #[doc = ""]
    pub fn ulCreateOverlay(
        window: ULWindow,
        width: ::std::os::raw::c_uint,
        height: ::std::os::raw::c_uint,
        x: ::std::os::raw::c_int,
        y: ::std::os::raw::c_int,
    ) -> ULOverlay;
}
extern "C" {
    #[doc = ""]
    #[doc = " Destroy an overlay."]
    #[doc = ""]
    pub fn ulDestroyOverlay(overlay: ULOverlay);
}
extern "C" {
    #[doc = ""]
    #[doc = " Get the underlying View."]
    #[doc = ""]
    pub fn ulOverlayGetView(overlay: ULOverlay) -> ULView;
}
extern "C" {
    #[doc = ""]
    #[doc = " Get the width (in device coordinates)."]
    #[doc = ""]
    pub fn ulOverlayGetWidth(overlay: ULOverlay) -> ::std::os::raw::c_uint;
}
extern "C" {
    #[doc = ""]
    #[doc = " Get the height (in device coordinates)."]
    #[doc = ""]
    pub fn ulOverlayGetHeight(overlay: ULOverlay) -> ::std::os::raw::c_uint;
}
extern "C" {
    #[doc = ""]
    #[doc = " Get the x-position (offset from the left of the Window), in device"]
    #[doc = " coordinates."]
    #[doc = ""]
    pub fn ulOverlayGetX(overlay: ULOverlay) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = ""]
    #[doc = " Get the y-position (offset from the top of the Window), in device"]
    #[doc = " coordinates."]
    #[doc = ""]
    pub fn ulOverlayGetY(overlay: ULOverlay) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = ""]
    #[doc = " Move the overlay to a new position (in device coordinates)."]
    #[doc = ""]
    pub fn ulOverlayMoveTo(overlay: ULOverlay, x: ::std::os::raw::c_int, y: ::std::os::raw::c_int);
}
extern "C" {
    #[doc = ""]
    #[doc = " Resize the overlay (and underlying View), dimensions should be"]
    #[doc = " specified in device coordinates."]
    #[doc = ""]
    pub fn ulOverlayResize(
        overlay: ULOverlay,
        width: ::std::os::raw::c_uint,
        height: ::std::os::raw::c_uint,
    );
}
extern "C" {
    #[doc = ""]
    #[doc = " Whether or not the overlay is hidden (not drawn)."]
    #[doc = ""]
    pub fn ulOverlayIsHidden(overlay: ULOverlay) -> bool;
}
extern "C" {
    #[doc = ""]
    #[doc = " Hide the overlay (will no longer be drawn)"]
    #[doc = ""]
    pub fn ulOverlayHide(overlay: ULOverlay);
}
extern "C" {
    #[doc = ""]
    #[doc = " Show the overlay."]
    #[doc = ""]
    pub fn ulOverlayShow(overlay: ULOverlay);
}
extern "C" {
    #[doc = ""]
    #[doc = " Whether or not an overlay has keyboard focus."]
    #[doc = ""]
    pub fn ulOverlayHasFocus(overlay: ULOverlay) -> bool;
}
extern "C" {
    #[doc = ""]
    #[doc = " Grant this overlay exclusive keyboard focus."]
    #[doc = ""]
    pub fn ulOverlayFocus(overlay: ULOverlay);
}
extern "C" {
    #[doc = ""]
    #[doc = " Remove keyboard focus."]
    #[doc = ""]
    pub fn ulOverlayUnfocus(overlay: ULOverlay);
}
